--- a/web/source/year.html.erb
+++ b/web/source/year.html.erb
@@ -7,4 +7,5 @@ title: Westie Charts
 </h1>
 
 <iframe src="https://open.spotify.com/embed?uri=<%= playlist_id %>"
-  width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
+  class="playlist"
+  frameborder="0" allowtransparency="true"></iframe>
